[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decryptx-helper"
version = "0.1.0"
description = "DecryptX Round 3 - Data Cleaning Contest Helper Library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "DecryptX Team" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "mypy>=1.0.0"]

[project.urls]
Homepage = "https://github.com/keanesc/decryptx-helper"
Repository = "https://github.com/keanesc/decryptx-helper.git"

[tool.hatch.build.targets.wheel]
packages = ["src/decryptx"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/data"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
